[Wiki Fix] Horizontal Scroll Glitch CSS

--- a/shuttleofx_client/static_tmp/styles/styles.less
+++ b/shuttleofx_client/static_tmp/styles/styles.less
@@ -463,6 +463,7 @@ ul.right-nav li .fa{
             a{
                 display: inline-block;
                 width: 50%;
+                margin-left: 1em;
             }
         }
     }
